Fix review suggestions